Add encoder & hci module

--- a/STM32F407_FrameAnalyzer.ioc
+++ b/STM32F407_FrameAnalyzer.ioc
@@ -24,20 +24,27 @@ Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SPI1
 Mcu.IP4=SYS
-Mcu.IPNb=5
+Mcu.IP5=TIM2
+Mcu.IP6=TIM14
+Mcu.IPNb=7
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC3
-Mcu.Pin1=PA1
-Mcu.Pin2=PA3
-Mcu.Pin3=PA5
-Mcu.Pin4=PA7
-Mcu.Pin5=PC7
-Mcu.Pin6=PC8
-Mcu.Pin7=PC10
-Mcu.Pin8=PC11
-Mcu.Pin9=VP_SYS_VS_Systick
-Mcu.PinsNb=10
+Mcu.Pin1=PA0-WKUP
+Mcu.Pin10=PC10
+Mcu.Pin11=PC11
+Mcu.Pin12=PB3
+Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin14=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin2=PA1
+Mcu.Pin3=PA3
+Mcu.Pin4=PA5
+Mcu.Pin5=PA7
+Mcu.Pin6=PC7
+Mcu.Pin7=PC8
+Mcu.Pin8=PA13
+Mcu.Pin9=PA14
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -56,11 +63,17 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM8_TRG_COM_TIM14_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA0-WKUP.Signal=S_TIM2_CH1_ETR
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=LCD_DC
 PA1.Locked=true
 PA1.Signal=GPIO_Output
+PA13.Mode=Serial_Wire
+PA13.Signal=SYS_JTMS-SWDIO
+PA14.Mode=Serial_Wire
+PA14.Signal=SYS_JTCK-SWCLK
 PA3.GPIOParameters=PinState,GPIO_Label
 PA3.GPIO_Label=LCD_SS
 PA3.Locked=true
@@ -74,6 +87,7 @@ PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=LCD_SPI1_MOSI
 PA7.Mode=TX_Only_Simplex_Unidirect_Master
 PA7.Signal=SPI1_MOSI
+PB3.Signal=S_TIM2_CH2
 PC10.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PC10.GPIO_Label=ANALYZER_SDA_IT_RISING
 PC10.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
@@ -120,8 +134,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=001_FrameAnalyzerV1.ioc
-ProjectManager.ProjectName=001_FrameAnalyzerV1
+ProjectManager.ProjectFileName=STM32F407_FrameAnalyzer.ioc
+ProjectManager.ProjectName=STM32F407_FrameAnalyzer
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
@@ -130,7 +144,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -171,12 +185,23 @@ SH.GPXTI7.0=GPIO_EXTI7
 SH.GPXTI7.ConfNb=1
 SH.GPXTI8.0=GPIO_EXTI8
 SH.GPXTI8.ConfNb=1
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Encoder_Interface
+SH.S_TIM2_CH1_ETR.ConfNb=1
+SH.S_TIM2_CH2.0=TIM2_CH2,Encoder_Interface
+SH.S_TIM2_CH2.ConfNb=1
 SPI1.CalculateBaudRate=42.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+TIM14.IPParameters=Prescaler,Period
+TIM14.Period=250-1
+TIM14.Prescaler=16800-1
+TIM2.IPParameters=Period
+TIM2.Period=39
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
 board=custom
 isbadioc=false
