--- a/STM32F407_FrameAnalyzer.ioc
+++ b/STM32F407_FrameAnalyzer.ioc
@@ -25,26 +25,29 @@ Mcu.IP2=RCC
 Mcu.IP3=SPI1
 Mcu.IP4=SYS
 Mcu.IP5=TIM2
-Mcu.IP6=TIM14
-Mcu.IPNb=7
+Mcu.IP6=TIM13
+Mcu.IP7=TIM14
+Mcu.IPNb=8
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PC3
-Mcu.Pin1=PA0-WKUP
-Mcu.Pin10=PC10
-Mcu.Pin11=PC11
-Mcu.Pin12=PB3
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin14=VP_TIM14_VS_ClockSourceINT
-Mcu.Pin2=PA1
-Mcu.Pin3=PA3
-Mcu.Pin4=PA5
-Mcu.Pin5=PA7
-Mcu.Pin6=PC7
-Mcu.Pin7=PC8
-Mcu.Pin8=PA13
-Mcu.Pin9=PA14
-Mcu.PinsNb=15
+Mcu.Pin0=PC1
+Mcu.Pin1=PC3
+Mcu.Pin10=PA14
+Mcu.Pin11=PC10
+Mcu.Pin12=PC11
+Mcu.Pin13=PB3
+Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin15=VP_TIM13_VS_ClockSourceINT
+Mcu.Pin16=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin2=PA0-WKUP
+Mcu.Pin3=PA1
+Mcu.Pin4=PA3
+Mcu.Pin5=PA5
+Mcu.Pin6=PA7
+Mcu.Pin7=PC7
+Mcu.Pin8=PC8
+Mcu.Pin9=PA13
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -54,6 +57,7 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA2_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -64,7 +68,10 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM8_TRG_COM_TIM14_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM8_UP_TIM13_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA0-WKUP.GPIOParameters=GPIO_PuPd
+PA0-WKUP.GPIO_PuPd=GPIO_PULLDOWN
 PA0-WKUP.Signal=S_TIM2_CH1_ETR
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=LCD_DC
@@ -87,10 +94,19 @@ PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=LCD_SPI1_MOSI
 PA7.Mode=TX_Only_Simplex_Unidirect_Master
 PA7.Signal=SPI1_MOSI
+PB3.GPIOParameters=GPIO_PuPd
+PB3.GPIO_PuPd=GPIO_PULLDOWN
 PB3.Signal=S_TIM2_CH2
-PC10.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PC1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PC1.GPIO_Label=ENCODER_BUTTON
+PC1.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PC1.GPIO_PuPd=GPIO_PULLUP
+PC1.Locked=true
+PC1.Signal=GPXTI1
+PC10.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC10.GPIO_Label=ANALYZER_SDA_IT_RISING
 PC10.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
+PC10.GPIO_PuPd=GPIO_PULLDOWN
 PC10.Locked=true
 PC10.Signal=GPXTI10
 PC11.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
@@ -144,7 +160,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM14_Init-TIM14-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -177,6 +193,8 @@ RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
+SH.GPXTI1.0=GPIO_EXTI1
+SH.GPXTI1.ConfNb=1
 SH.GPXTI10.0=GPIO_EXTI10
 SH.GPXTI10.ConfNb=1
 SH.GPXTI11.0=GPIO_EXTI11
@@ -194,13 +212,20 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+TIM13.IPParameters=Prescaler,Period
+TIM13.Period=1000-1
+TIM13.Prescaler=16800-1
 TIM14.IPParameters=Prescaler,Period
 TIM14.Period=250-1
 TIM14.Prescaler=16800-1
-TIM2.IPParameters=Period
-TIM2.Period=39
+TIM2.IC1Filter=15
+TIM2.IC2Filter=15
+TIM2.IPParameters=Period,IC1Filter,IC2Filter
+TIM2.Period=10000
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM13_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM13_VS_ClockSourceINT.Signal=TIM13_VS_ClockSourceINT
 VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
 board=custom
