--- a/STM32F407_FrameAnalyzer.ioc
+++ b/STM32F407_FrameAnalyzer.ioc
@@ -160,7 +160,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM14_Init-TIM14-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM14_Init-TIM14-false-HAL-true,7-MX_TIM13_Init-TIM13-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -213,8 +213,8 @@ SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 TIM13.IPParameters=Prescaler,Period
-TIM13.Period=1000-1
-TIM13.Prescaler=16800-1
+TIM13.Period=200-1
+TIM13.Prescaler=8400-1
 TIM14.IPParameters=Prescaler,Period
 TIM14.Period=250-1
 TIM14.Prescaler=16800-1
